<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="256dp"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true" >

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:contentScrim="?attr/colorPrimary"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/imgBackdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/dicoding"
                android:contentDescription="@string/poster_desc"
                android:scaleType="centerCrop" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar3"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activities.MovieDetailActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/imgPoster"
                    android:minWidth="150dp"
                    android:layout_width="wrap_content"
                    android:minHeight="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/poster_desc"
                    tools:src="@drawable/star_off"/>

                <TextView
                    android:id="@+id/lblJudul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/judul"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_toEndOf="@+id/imgPoster"/>

                <TextView
                    android:id="@+id/plc_tanggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lblJudul"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    android:layout_toEndOf="@+id/imgPoster"
                    android:text="@string/tgl_rilis" />

                <TextView
                    android:id="@+id/lblTanggalRilis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/tgl_rilis"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/imgPoster"
                    android:layout_below="@+id/plc_tanggal"/>

                <TextView
                    android:id="@+id/plc_popularitas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/popularitas"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:layout_toEndOf="@id/imgPoster"
                    android:layout_below="@+id/lblTanggalRilis"/>

                <TextView
                    android:id="@+id/lblPopularitas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/popularitas"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/imgPoster"
                    android:layout_below="@+id/plc_popularitas"/>

                <TextView
                    android:id="@+id/plc_keterangan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/keterangan"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:layout_below="@+id/imgPoster"/>

                <TextView
                    android:id="@+id/lblKeterangan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/keterangan"
                    android:layout_marginStart="10dp"
                    android:layout_below="@+id/plc_keterangan"/>

                <Button
                    android:id="@+id/btnBagikan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lblKeterangan"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:text="@string/bagikan"/>

                <Button
                    android:id="@+id/btnHapus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnBagikan"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorWhite"
                    android:text="@string/hapus"/>
            </RelativeLayout>

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>